# FriendlyFireStats

./: Cargo.toml  Dockerfile  README.md  donations.json  donations_2021.json  donations_2022.json  donations_2023.json  plot.py
src/: main.rs
static/: index.html  script.js  style.css
