[package]
name = "friendly_fire_stats"
version = "0.1.0"
authors = ["Nico Borgsmüller <kaenganxt@mc-anura.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.reqwest]
version = "0.10.*"
features = ["blocking", "json"]

[dependencies.serde]
version = "1.0.*"
features = ["derive"]

[dependencies]
serde_json = "1.0.*"
