[package]
name = "friendly_fire_stats"
version = "0.1.0"
authors = ["Nico Borgsmüller <kaenganxt@mc-anura.de>"]
edition = "2021"

[dependencies.reqwest]
version = "0.10.*"
default-features = false
features = ["blocking", "json", "rustls-tls"]

[dependencies.serde]
version = "1.0.*"
features = ["derive"]

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies]
serde_json = "1.0.*"
actix-web = "3"
actix-files = "0.5"
simplelog = "0.10"
